--- a/hooks/build
+++ b/hooks/build
@@ -76,9 +76,8 @@ for arch in ${build_architectures[@]}; do
 
   docker exec docker_daemon docker build \
     --squash \
-    --platform=${arch} \
+    --platform=${docker_arch_map[${arch}]} \
     --build-arg BASE_IMAGE_PREFIX=${base_image_prefix_map[${arch}]} \
-    --build-arg ARCH=${arch} \
     --build-arg GUACAMOLE_Version=${GUACAMOLE_Version} \
     --build-arg TOMCAT_Version=${TOMCAT_Version} \
     --build-arg MySQL_Connector_Version=${MySQL_Connector_Version} \
